# conference_speakers

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  config.py  docker-compose.yml  find_env_files.py  pyproject.toml  requirements.txt  run.sh  run_docker.sh  run_scraper.sh  scraper.py  scraper_runner.py  setup.sh  stop_docker.sh  test_scraper.py
.github/workflows/: update-data.yml
controllers/: __init__.py  scraper_controller.py
data/: speakers.csv  speakers.json
models/: __init__.py  speaker.py
src/: __init__.py  main.py  paths.py  speaker.py  utils.py
utils/: __init__.py  data_utils.py
views/: __init__.py  streamlit_view.py
